2013-02-05 JJ Allaire <jj@rstudio.org>

        * src/attributes.cpp : ensure that line comments invalidate block
        comments when parsing for attributes

2013-02-04 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/r_type_traits.h : make the r_type_pairstring_string_tag tag
        more general, handling wstring as well as string
        * include/Rcpp/internal/wrap.h : using make_charsexp, a more generic version
        of charsexp_from_wstring.
        * include/Rcpp/as.h : more support fot wstring
        * include/Rcpp/internal/wrap.h : rework the support of wstring
        * include/Rcpp/internal/export.h : added as_string_elt to rework the support
        of wstring 
        * include/Rcpp/traits/char_type.h : new trait to help the wstring support
        * include/Rcpp/String.h : added some support for wstring 
        * include/Rcpp/vector/string_proxy.h : adapt to add wstring support 
        * unitTests/runit.wstring.R : unit tests for wstring support
        * unitTests/cpp/wstring.cpp : unit tests for wstring support
        
2013-02-03 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/wrap_type_traits.h : support for wrap( wstring )
        * include/Rcpp/internal/export.h : exporting wstring and containers of wstring
        * include/Rcpp/internal/wrap.h : support for wrap( wstring ) and containers of wstring
        * include/RcppCommon.h : definition of charsexp_from_wstring
        * src/api.cpp: implementation of charsexp_from_wstring

2013-02-02 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/MatrixRow.h: correct operator++(int) and operator--(int)
        * include/Rcpp/internal/Proxy_Iterator.h: correct operators ++ and --
        * include/Rcpp/sugar/Range.h: correct operators ++ and --
        * include/Rcpp/sugar/tools/iterator.h: correct operators ++ and --
        * include/Rcpp/vector/MatrixBase.h : correct operators ++ and --