@@ -121,9 +121,14 @@ namespace internal{
 		 * element this proxy refers to and convert it to a 
 		 * C string
 		 */
-		 operator /*const */ char*() const {
+		 operator /* const */ char*() const {
 		 	 return const_cast<char*>( CHAR(get()) );
 		 }
+		 
+		 // operator std::wstring() const {
+		 //     const char* st = CHAR(get()) ;
+		 //     return std::wstring( st, st+strlen(st) ) ;
+		 // }
 		
 		/**
 		 * Prints the element this proxy refers to to an 
